--- a/index_sob_nos.html
+++ b/index_sob_nos.html
@@ -95,7 +95,7 @@
         </div>
 
         <div class="title1">
-            <h1>Desenvolvedores de sítios Web:</h1>
+            <h1>Developers de síte Web:</h1>
          </div>
      
          <div class="alex_f">
@@ -160,7 +160,7 @@
     <div class="turma_text_conteiner_4">
         <p>
             <h1>JOÃO PEDRO</h1>
-            Eu gostei muito de aprender HTML e de participar nesta atividade, pois proporcionou uma boa experiência. Pude aprender a criar sites e configurá-los, também troquei ideias com os meus colegas para melhorar o desenvolvimento do site.
+           Gostei da experiência de aprender uma nova linguagem de programação, aprendi a criar um site em html do zero e de aumentar as minhas capacidades em escolhoer, editar fotografias.
         </p>
     </div>
     
@@ -317,7 +317,7 @@
         <h1>OFERTA FORMATIVA</h1>
         <h2>Cursos Profissionais:</h2>
         <div class="course-list">
-            <h3>Técnico/a de Multimídia</h3>
+            <h3>Técnico/a de Multimédia</h3>
             <h3>Técnico/a de Informática e Sistemas</h3>
             <h3>Técnico/a de Cozinha e Pastelaria</h3>
         </div>
